# Fortsecue

./: .gitignore  Labour Hire Process.drawio  New NSR.drawio  README.md  Renewal Process.drawio  Untitled Diagram.drawio  Vendor Onboarding.drawio  index_probe.py  interaction_id.txt  pyproject.toml  requirements.txt  setup.sh
app/: main.py
logos/: AGENTS.md  AI Model Design.md  API & Integration Specification.md  CONTRIBUTING.md  Data Flow Diagram (DFD) and Entity-Relationship Diagram (ERD).md  Graph Schema & Knowledge Model Specification.md  Knowledgebase & Prompt Design Guide.md  Pipeline & Workflow Design.md  System Architecture Document (SAD),md  Use Case Document,md  __init__.py  app.py  app_state.py  main.py  memory.py  model_tiers.py
scripts/: dev_smoke_preview.py
tests/: conftest.py  test_abstraction_generalisation.py  test_activation_routing.py  test_agent_assistant.py  test_agent_dialogue_pipeline.py  test_alerts_endpoint.py  test_api_concept_promotion.py  test_api_v1_agent_query.py  test_api_v1_alerts.py  test_api_v1_project_map.py  test_api_v1_search.py  test_api_v1_stakeholder.py  test_belief_conversion_from_preview.py  test_belief_projection_cypher.py  test_belief_schema_stability.py  test_bundles.py  test_cluster_engine_governance.py  test_clustering_service.py  test_commit_endpoint.py  test_concept_assignment.py  test_concept_update_pipeline.py  test_contradiction_engine.py  test_contradiction_projection.py  test_dependency_imports.py  test_embeddings_service.py  test_entity_resolution.py  test_event_bus_inmemory.py  test_event_bus_redis_contract.py  test_event_schema_stability.py  test_execution_trace_integration.py  test_graph_endpoint.py  test_graph_unavailable.py  test_graphio_canonical.py  test_information_models.py  test_ingest.py  test_ingest_audio.py  test_ingest_doc.py  test_ingest_note.py  (+27 more)
(+127 files in other folders)
