[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logos"
version = "0.1.0"
description = "LOGOS FastAPI project"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
