# pyproject.toml (to be placed in the repository root)
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "logos"
version = "0.1.0"
description = "LOGOS Cognitive Engine and Stakeholder Engagement MVP"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn[standard]",
  "neo4j",
  "pyyaml",
  "spacy",
  "transformers",
  "scikit-learn",
  "pytest",
  "ruff"
]
