[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logos"
version = "0.1.0"
description = "LOGOS Cognitive Engine and Stakeholder Engagement MVP"
authors = [
  { name = "Lachlan Robertson", email = "lachlanrobertson@iinet.net.au" }
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn[standard]",
  "neo4j",
  "pyyaml",
  "httpx",
  "python-dotenv",
  "jinja2",
  "python-multipart",
  "python-dateutil",
  "tenacity",
  "typing-extensions",
  "orjson"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "ruff"
]

nlp = [
  "spacy",
  "transformers",
  "scikit-learn"
]
